<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="5dp">


    //************************************************************
    //1. Question Section

    <android.support.v7.widget.CardView

        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/mf_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/ques_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/myth_or_fact"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/pinkclr">

                </TextView>

                <TextView
                    android:id="@+id/count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/pinkclr">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/content_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="10dp"
                        android:padding="10dp"
                        android:text="The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group.The likelihood of young women being diagnoised with breast cancer is increasing faster than any other age-group."
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000">

                    </TextView>

                </ScrollView>

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/myths_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_myths1"
                    android:text="@string/btn_myth"
                    android:textColor="#f557c1" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/facts_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_myths1"
                    android:text="@string/btn_fact"
                    android:textColor="#f557c1" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    //************************************************************


    //************************************************************************************************************************************************************************************
    //************************************************************************************************************************************************************************************

    //2. Explanation Section

    <LinearLayout

        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/ans_not_quite"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/pinkclr">

                    </TextView>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <TextView
                            android:id="@+id/tv_content"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:lineSpacingExtra="5dp"
                            android:padding="10dp"
                            android:text="“Two per cent of the Indian women suffering from cancer are in 20 to 30 years age group, 16 per cent are in 30 to 40, 28 per cent are in 40 to 50 age group.

    So, almost 46 per cent women patients are below 50,”  Sameer Kaul, senior consultant of Surgical Oncology at Indraprastha Apollo Hospital, Delhi, was quoted by the Indo-AsianNewsService as saying.

    He added that a matter of concern is that an incr "
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000">

                        </TextView>

                    </ScrollView>

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/done_btn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_myths1"
                        android:text="@string/btn_done"
                        android:textColor="#f557c1" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    //************************************************************


</LinearLayout>