...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/languages"
            android:padding="15dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layout1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
                android:layout_alignBottom="@+id/layout1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:alpha="50"
                android:background="@color/pinkclr"
                android:text="Continue"
                android:textColor="#fff" />


        </LinearLayout>


...
